# raft-chat

./: .env_example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.nginx  LICENSE  README.md  TYPE_CHECKING.md  USAGE.md  check_all.sh  check_ruff.sh  check_types.sh  docker-compose.yml  get_tunnel_url.sh  mypy.ini  nginx.conf  pyproject.toml  requirements.txt
app/: __init__.py  callbacks.py  config.py  database.py  document_utils.py  main.py  process_question.py  prompts.py  vector_store.py
app/prompts/: README.md  multi_query_retriever.txt  rag_prompt.txt
frontend/: gradio_app.py
